improve: improve submit on k8s